--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Cube</title>
+    <style>
+      *{
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
     <script src="https://unpkg.com/vue@2.5.2/dist/vue.min.js"></script>
